Added 3 more sections, styling to be fixed

--- a/index.html
+++ b/index.html
@@ -13,18 +13,81 @@
             <div class = "logo hero-logo-text">
                     CourseReviews
             </div>
-            <div class = "headerOne hero-secondary-text">Home</div>
-            <div class = "headerTwo hero-secondary-text">About</div>
-            <div class = "headerThree hero-secondary-text">Contact</div>
+            <div class = "navContainer-option">Home</div>
+            <div class = "navContainer-option">About</div>
+            <div class = "navContainer-option">Contact</div>
         </div>
         <div class = "top-header-content-container">
-            <div class = "text hero-main-text">
-                This website is awesome bestie.
+                <div class = "hero-layout-container">
+                    <div class = "hero-main-text">This website is awesome bestie omg.</div>
+                    <div class = "hero-secondary-text">Subtext with smaller font and contrast bestie.</div>
+                    <button class = "sign-up-button">Sign Up</button>
+                </div>
+                <div class = "hero-layout-container">
+                    <div class="image">placeholder</div>
+                </div>
+        </div>
+    </div>
+
+    <div class ="generic-container">
+        <div class ="information-header-text">
+            Some random information.
+        </div>
+        <div class = "cards-container">
+            <div class = "card-container">
+                <div class = "card"></div>
+                <div class = "card-text">
+                    some description of card
+                </div>
             </div>
-            <div class = "image hero-secondary-text">
-                place holder
+            <div class = "card-container">
+                <div class = "card"></div>
+                <div class = "card-text">
+                    some description of card
+                </div>
+            </div>
+            <div class = "card-container">
+                <div class = "card"></div>
+                <div class = "card-text">
+                    some description of card
+                </div>
+            </div>
+            <div class = "card-container">
+                <div class = "card"></div>
+                <div class = "card-text">
+                    some description of card
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="quote-section-container">
+        <div class ="quote-text">
+            "Inspiring quote" - Nikhen
+        </div>
+    </div>
+    
+    <div class = "generic-container">
+        <div class = "call-to-action-container">
+            <div class = "call-to-action-card">
+                <div class = "call-to-action-text-container">
+                    <div class = "header">
+                        Call to action! It's time!
+                    </div>
+                    <div class = "subtitle">
+                        Sign up for our product by clicking that button right over there!
+                    </div>
+                </div>
+        
+                <div class ="call-to-action-button-container">
+                    <button class= "call-to-action-header-button">
+                        Sign up
+                    </button>
+                </div>
             </div>
         </div>
     </div>
+
 </body>
 </html>
