Added author section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             </div>
         </div>
     </div>
+    <div class = "bottomContainer">
+        Author: Nikhen
+    </div>
 
 </body>
 </html>
