--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-    <div class ="generic-container">
+    <div class ="information-container">
         <div class ="information-header-text">
             Some random information.
         </div>
@@ -69,7 +69,6 @@
     </div>
     
     <div class = "generic-container">
-        <div class = "call-to-action-container">
             <div class = "call-to-action-card">
                 <div class = "call-to-action-text-container">
                     <div class = "header">
@@ -86,7 +85,6 @@
                     </button>
                 </div>
             </div>
-        </div>
     </div>
     <div class = "bottomContainer">
         Author: Nikhen
